# SuperSecureChat

./: .gitignore  README.md
p2p_chat/: CONNECTION_WIZARD.md  MODERN_GUI_UPGRADE.md  README_EXECUTABLE.md  RECONNECTION_FEATURES.md  __init__.py  pyproject.toml  pyrightconfig.json  requirements.txt  run_app.sh  settings.json  test_p2p_chat.py  test_p2p_chat.sh
p2p_chat/p2p_chat/: README_file_structure.md  __init__.py  __main__.py  audio_settings_dialog.py  chat_window.py  connection_settings_dialog.py  connection_wizard.py  custom_file_dialog.py  file_progress_dialog.py  file_transfer.py  file_transfer_dialog.py  file_transfer_mixin.py  main.py  modern_chat_window.py  modern_gui.py  rtc_peer.py  security.py  settings_manager.py  signaling.py  utils.py  voice_chat_mixin.py
